src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__logs__tests__draw_blocks_logs_long_name.snap
---
source: src/core/status/ui/draw_blocks/logs.rs
expression: setup.terminal.backend()
---
"╭ Logs 3/3 - a_long_container_name_for_the_purposes_of_this_test - a_long_image╮"
"│  line 1                                                                      │"
"│  line 2                                                                      │"
"│▶ line 3                                                                      │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
