src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__logs__tests__draw_blocks_logs_parsing_frame_one.snap
---
source: src/core/status/ui/draw_blocks/logs.rs
expression: setup.terminal.backend()
---
"╭ Logs - container_1 - image_1 ╮"
"│        parsing logs ⠙        │"
"│                              │"
"│                              │"
"│                              │"
"╰──────────────────────────────╯"
