src/core/status/ui/draw_blocks/snapshots/clikd__core__status__ui__draw_blocks__logs__tests__draw_blocks_logs_some_line_two.snap
---
source: src/core/status/ui/draw_blocks/logs.rs
expression: setup.terminal.backend()
---
"╭ Logs 2/3 - container_1 - image_1 ╮"
"│  line 1                          │"
"│▶ line 2                          │"
"│  line 3                          │"
"│                                  │"
"╰──────────────────────────────────╯"
